<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_programmazione"
            android:icon="@drawable/movie"
            android:title="@string/programmazione" />
        <item
            android:id="@+id/nav_prezzi"
            android:icon="@drawable/coins"
            android:title="@string/biglietti" />
        <item
            android:id="@+id/nav_sale"
            android:icon="@drawable/seats"
            android:title="@string/sale" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info"
            android:title="@string/info" />
    </group>

    <item android:title="Utente">
        <menu>
            <item
                android:id="@+id/nav_registrazione"
                android:icon="@drawable/user"
                android:title="@string/registrazione" />
            <item
                android:id="@+id/nav_accesso"
                android:icon="@drawable/enter"
                android:title="@string/accesso" />
        </menu>
    </item>

</menu>
