<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/usernameUtente"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/emailUtente"
        android:layout_below="@+id/editTextUsername"
        android:layout_alignStart="@+id/editTextUsername"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/passwordUtente"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignStart="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextConfermaPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextPassword"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/confermaPasswordUtente"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonRegistrazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextConfermaPassword"
        android:layout_marginTop="25dp"
        android:text="@string/registrati"
        android:layout_alignEnd="@+id/editTextConfermaPassword"
        android:layout_alignStart="@+id/editTextConfermaPassword" />
</RelativeLayout>